# 2025-quests-data

./: LICENSE  README.md  download.sh  pyproject.toml  requirements.txt
nbs/: 02-Aluminum.ipynb  02-GAP20-Compress.ipynb  02-GAP20-Entropy.ipynb  02-rMD17-entropy.ipynb  02-rMD17.ipynb  03-GAP20-Overlap.ipynb  03-GAP20-UQ.ipynb  04-TM23.ipynb  05-Cu-CNA.ipynb  05-Cu-Entropy.ipynb  05-Ta.ipynb  A01-Cutoff.ipynb  A01-Descriptors.ipynb  A01-SOAP.ipynb  A08-Denoiser.ipynb  A08-Example2D.ipynb  A11-Bandwidth.ipynb  A11-Cu-Entropy.ipynb  A11-Cu-PhaseDiagram.ipynb  A11-Lindemann.ipynb  A11-QTB.ipynb  A11-Sn-PhaseDiagram.ipynb  einstein.py  quests_data.py
